[gd_scene load_steps=18 format=3 uid="uid://dk6hp08y53y8q"]

[ext_resource type="Texture2D" uid="uid://dnyr812kuu3ks" path="res://assets/Lineup/lineup-bg.png" id="1_s7xo7"]
[ext_resource type="Texture2D" uid="uid://2odmacod56tj" path="res://Assets/Lineup/Lineup_Characters/lineup-selene.png" id="2_0l2dn"]
[ext_resource type="Texture2D" uid="uid://dxor7effqi187" path="res://Assets/Lineup/Lineup_Characters/lineup-theo.png" id="3_8x1ri"]
[ext_resource type="Script" uid="uid://bqghapnhtamtq" path="res://scripts/lineup_marg_button.gd" id="4_1266v"]
[ext_resource type="Texture2D" uid="uid://cyus1akt5obaf" path="res://Assets/Lineup/Lineup_Characters/lineup-alan.png" id="4_gfrte"]
[ext_resource type="Texture2D" uid="uid://b6br51wdynrjn" path="res://Assets/Lineup/Lineup_Characters/lineup-marg.png" id="5_0l2dn"]
[ext_resource type="Texture2D" uid="uid://cwqd5ec1ujbmw" path="res://Assets/Lineup/Lineup_Highlights/highlight-lineup-alan.png" id="6_tnlrv"]
[ext_resource type="Texture2D" uid="uid://b5yymsc05tucj" path="res://Assets/Lineup/Lineup_Highlights/highlight-lineup-marg.png" id="7_7kn7v"]
[ext_resource type="Script" uid="uid://c15d4qsm5mbdc" path="res://scripts/lineup_alan_button.gd" id="7_n1xl2"]
[ext_resource type="Texture2D" uid="uid://djt5o3ixql33g" path="res://Assets/Lineup/Lineup_Highlights/highlight-lineup-selene.png" id="8_6ws82"]
[ext_resource type="Script" uid="uid://chil6v67hjs5v" path="res://scripts/lineup_selene_button.gd" id="8_7kn7v"]
[ext_resource type="Texture2D" uid="uid://b3f8mnwqy0a47" path="res://Assets/Lineup/Lineup_Highlights/highlight-lineup-theo.png" id="9_duvvb"]
[ext_resource type="Script" uid="uid://bk6dkxvvj1puk" path="res://scripts/lineup_theo_button.gd" id="13_s2yej"]
[ext_resource type="Texture2D" uid="uid://vvvyxycux0vn" path="res://Assets/Lineup/Lineup_Shadows/shadow-lineup-alan.png" id="14_8wkf2"]
[ext_resource type="Texture2D" uid="uid://di4eco131o7hq" path="res://Assets/Lineup/Lineup_Shadows/shadow-lineup-marg.png" id="15_7ouk3"]
[ext_resource type="Texture2D" uid="uid://p3ptic8tjqa8" path="res://Assets/Lineup/Lineup_Shadows/shadow-lineup-selene.png" id="16_58o25"]
[ext_resource type="Texture2D" uid="uid://dcupafca52njy" path="res://Assets/Lineup/Lineup_Shadows/shadow-lineup-theo.png" id="17_45xpx"]

[node name="Node2D" type="Node2D"]

[node name="LineupBg" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_s7xo7")

[node name="LineupMargButton" type="TextureButton" parent="."]
z_index = 5
offset_right = 1152.0
offset_bottom = 648.0
texture_normal = ExtResource("5_0l2dn")
texture_hover = ExtResource("7_7kn7v")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_1266v")

[node name="LineupAlanButton" type="TextureButton" parent="."]
z_index = 4
offset_right = 1152.0
offset_bottom = 648.0
texture_normal = ExtResource("4_gfrte")
texture_hover = ExtResource("6_tnlrv")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("7_n1xl2")

[node name="LineupSeleneButton" type="TextureButton" parent="."]
z_index = 2
offset_right = 1152.0
offset_bottom = 648.0
texture_normal = ExtResource("2_0l2dn")
texture_hover = ExtResource("8_6ws82")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("8_7kn7v")

[node name="LineupTheoButton" type="TextureButton" parent="."]
z_index = 2
offset_right = 1152.0
offset_bottom = 648.0
texture_normal = ExtResource("3_8x1ri")
texture_hover = ExtResource("9_duvvb")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("13_s2yej")

[node name="ShadowLineupAlan" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(576, 324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("14_8wkf2")

[node name="ShadowLineupMarg" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(576, 324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("15_7ouk3")

[node name="ShadowLineupSelene" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(576, 324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("16_58o25")

[node name="ShadowLineupTheo" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(576, 324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("17_45xpx")

[connection signal="button_down" from="LineupMargButton" to="LineupMargButton" method="_on_button_down"]
[connection signal="mouse_entered" from="LineupMargButton" to="LineupMargButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LineupMargButton" to="LineupMargButton" method="_on_mouse_exited"]
[connection signal="button_down" from="LineupAlanButton" to="LineupAlanButton" method="_on_button_down"]
[connection signal="mouse_entered" from="LineupAlanButton" to="LineupAlanButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LineupAlanButton" to="LineupAlanButton" method="_on_mouse_exited"]
[connection signal="button_down" from="LineupSeleneButton" to="LineupSeleneButton" method="_on_button_down"]
[connection signal="mouse_entered" from="LineupSeleneButton" to="LineupSeleneButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LineupSeleneButton" to="LineupSeleneButton" method="_on_mouse_exited"]
[connection signal="button_down" from="LineupTheoButton" to="LineupTheoButton" method="_on_button_down"]
[connection signal="mouse_entered" from="LineupTheoButton" to="LineupTheoButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LineupTheoButton" to="LineupTheoButton" method="_on_mouse_exited"]
